# OpenSC-pqc-SSR2023

./: ZZATTERM01CEBIT15.cvcert  ZZATTERM01CEBIT15.pkcs8  ZZATTERM01CEBIT15_expl.pkcs8  ZZATTERM01CEBIT15_topkcs8.pkcs8  ZZPQCCVCA.cvcert  ZZPQCCVCA.dilithium3  efcardaccess.dump  efcardaccess_asn1.conf
src/libopensc/: apdu.c  reader-pcsc.c
src/sm/: Makefile.am  sm-eac.c  sm-iso.c  sm-iso.h
src/sm/PQClean/test/duplicate_consistency/: mqdss-64_clean.yml
src/tools/: Makefile.am  fread_to_eof.c  goid-tool-cmdline.c  goid-tool-cmdline.h  goid-tool.c  goid-tool.ggo.in
